$ goa gen github.com/akm/goa_v2_simple_example/design
But ListResponseBody in gen/http/people/server/types.go was modified
from an array of Person to an object which has a collection named "People".

-type ListResponseBody []*Person
+type ListResponseBody struct {
+	People PersonCollectionResponseBody `form:"people" json:"people" xml:"people"`
+}
